--- a/collabtask-api/Dockerfile
+++ b/collabtask-api/Dockerfile
@@ -13,5 +13,5 @@ ADD collabtask-api/target/${APPID}.jar /app/app.jar
 # 暴露端口
 EXPOSE 8002
 
-# 启动命令
+# 启动命令（环境由运行时环境变量SPRING_PROFILES_ACTIVE决定）
 CMD ["sh", "-c", "java -Xms512m -Xmx1024m ${JAVA_OPTS} -Dnacos.logging.default.config.enabled=false -jar /app/app.jar"]
