--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,132 +1,87 @@
 # ============================================
-# GitLab CI/CD Pipeline 配置
-# 只在test分支触发（包括push和merge request）
+# GitLab CI/CD 配置
+# 触发条件：dev合并到test分支
 # ============================================
 
 variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
-  NEXUS_REGISTRY: "localhost:5000"
-  NEXUS_MAVEN_REPO: "http://localhost:8081/repository/maven-public/"
-  API_IMAGE: "${NEXUS_REGISTRY}/collabtask-api"
-  GATEWAY_IMAGE: "${NEXUS_REGISTRY}/collabtask-gateway"
-  VERSION: "${CI_COMMIT_SHORT_SHA}"
+  # 使用容器名访问Nexus（关键！）
+  NEXUS_REGISTRY: "collabtask-nexus:5000"
+  NEXUS_USERNAME: "admin"
+  NEXUS_PASSWORD: "123456"
+  PROJECT_DIR: "/workspace"
 
 stages:
-  - build
-  - test
-  - docker-build
   - deploy
 
-cache:
-  key: "${CI_COMMIT_REF_SLUG}"
-  paths:
-    - .m2/repository/
-    - collabtask-api/target/
-    - collabtask-gateway/target/
-
 # ============================================
-# 阶段1：编译
-# ============================================
-maven-build:
-  stage: build
-  image: maven:3.9-eclipse-temurin-17
-  tags:
-    - docker
-  script:
-    - echo "==> 开始Maven编译..."
-    - mvn clean package -DskipTests
-    - echo "==> Maven编译完成"
-  artifacts:
-    paths:
-      - collabtask-api/target/*.jar
-      - collabtask-gateway/target/*.jar
-    expire_in: 1 day
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "test"'
-
-# ============================================
-# 阶段2：测试
-# ============================================
-unit-test:
-  stage: test
-  image: maven:3.9-eclipse-temurin-17
-  tags:
-    - docker
-  script:
-    - echo "==> 运行单元测试..."
-    - mvn test || echo "测试失败，继续构建"
-  allow_failure: true
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "test"'
-
-# ============================================
-# 阶段3：构建Docker镜像
-# ============================================
-docker-build-api:
-  stage: docker-build
-  image: docker:24
-  tags:
-    - docker
-  services:
-    - docker:24-dind
-  variables:
-    DOCKER_TLS_CERTDIR: "/certs"
-  before_script:
-    - echo ${NEXUS_PASSWORD} | docker login ${NEXUS_REGISTRY} -u ${NEXUS_USERNAME} --password-stdin
-  script:
-    - echo "==> 构建API镜像..."
-    - docker build -f collabtask-api/Dockerfile -t ${API_IMAGE}:${VERSION} -t ${API_IMAGE}:latest .
-    - echo "==> 推送镜像到Nexus..."
-    - docker push ${API_IMAGE}:${VERSION}
-    - docker push ${API_IMAGE}:latest
-    - echo "==> API镜像构建完成"
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "test"'
-  dependencies:
-    - maven-build
-
-docker-build-gateway:
-  stage: docker-build
-  image: docker:24
-  tags:
-    - docker
-  services:
-    - docker:24-dind
-  variables:
-    DOCKER_TLS_CERTDIR: "/certs"
-  before_script:
-    - echo ${NEXUS_PASSWORD} | docker login ${NEXUS_REGISTRY} -u ${NEXUS_USERNAME} --password-stdin
-  script:
-    - echo "==> 构建Gateway镜像..."
-    - docker build -f collabtask-gateway/Dockerfile -t ${GATEWAY_IMAGE}:${VERSION} -t ${GATEWAY_IMAGE}:latest .
-    - echo "==> 推送镜像到Nexus..."
-    - docker push ${GATEWAY_IMAGE}:${VERSION}
-    - docker push ${GATEWAY_IMAGE}:latest
-    - echo "==> Gateway镜像构建完成"
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "test"'
-  dependencies:
-    - maven-build
-
-# ============================================
-# 阶段4：部署 a
+# 测试环境自动部署
 # ============================================
 deploy-test:
   stage: deploy
-  image: alpine:latest
   tags:
-    - docker
+    - local
+  variables:
+    ENV: "test"
   script:
-    - echo "==> 测试环境部署完成"
-    - echo "镜像已推送到Nexus:"
-    - echo "  API镜像 - ${API_IMAGE}:latest"
-    - echo "  Gateway镜像 - ${GATEWAY_IMAGE}:latest"
+    - echo "=========================================="
+    - echo "🚀 测试环境自动部署"
+    - echo "=========================================="
+    - echo "提交分支: $CI_COMMIT_BRANCH"
+    - echo "提交作者: $CI_COMMIT_AUTHOR"
+    - echo "提交SHA: $CI_COMMIT_SHORT_SHA"
+    - echo "=========================================="
     - echo ""
-    - echo "本地部署命令:"
-    - echo "  make deploy-local"
+    
+    # 进入项目目录
+    - cd $PROJECT_DIR
+    
+    # 登录Nexus（使用容器名）
+    - echo "🔐 登录Nexus..."
+    - echo "$NEXUS_PASSWORD" | docker login $NEXUS_REGISTRY -u $NEXUS_USERNAME --password-stdin
+    
+    # 执行发版（传递容器名作为Registry）
+    - echo "📦 开始构建和部署..."
+    - make release ENV=$ENV NEXUS_REGISTRY=$NEXUS_REGISTRY
+    
+    - echo ""
+    - echo "=========================================="
+    - echo "✅ 测试环境部署完成！"
+    - echo "=========================================="
+    - echo "🌐 访问: http://localhost:8001"
+    - echo "📊 日志: docker logs -f collabtask-api"
+    - echo "=========================================="
+  rules:
+    # 当代码合并到test分支时触发
+    - if: '$CI_COMMIT_BRANCH == "test"'
+      when: on_success
   environment:
     name: test
     url: http://localhost:8001
+  timeout: 15m
+
+# ============================================
+# 生产环境手动部署
+# ============================================
+deploy-prod:
+  stage: deploy
+  tags:
+    - local
+  variables:
+    ENV: "prod"
+  script:
+    - echo "=========================================="
+    - echo "🚀 生产环境部署"
+    - echo "=========================================="
+    - cd $PROJECT_DIR
+    - echo "$NEXUS_PASSWORD" | docker login $NEXUS_REGISTRY -u $NEXUS_USERNAME --password-stdin
+    - make release ENV=$ENV NEXUS_REGISTRY=$NEXUS_REGISTRY
+    - echo ""
+    - echo "✅ 生产环境部署完成！"
   rules:
-    - if: '$CI_COMMIT_BRANCH == "test"'
-  when: on_success
+    # test合并到main时，需要手动点击
+    - if: '$CI_COMMIT_BRANCH == "main"'
+      when: manual
+  environment:
+    name: production
+    url: http://localhost:8001
+  timeout: 15m
