--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,87 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
-.idea/
-.cusors/
+# Compiled class files
+*.class
 
-logs/
-.DS_Store
-docs/
-docker/
-scripts/
+# Log files
+*.log
 
-# Docker
-Dockerfile
-docker-compose.yml
-.dockerignore
-
-# 其他
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
 .mvn/
 mvnw
 mvnw.cmd
+
+# IDE
+.idea/
+*.iws
+*.iml
+*.ipr
+.vscode/
+.settings/
+.classpath
+.project
+.factorypath
+.cusors/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs directory
+logs/
+*.log
+
+# Documentation
+docs/
+
+# Docker files
+docker/
+Dockerfile
+docker-compose.yml
+docker-compose-*.yml
+.dockerignore
+
+# Scripts
+scripts/
+
+# CI/CD
 .gitlab-ci.yml
 .gitlab-ci.yml.example
 .github/
+
+# Spring Boot
+spring-boot-*.log
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Test output
+.alcache/
+.alpackages/
+.snapshots/
+.output/
+*.app
+rad.json
+*.g.xlf
+*.flf
+TestResults.xml
