--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <jsoup.version>1.15.3</jsoup.version>
         <knife4j.version>4.5.0</knife4j.version>
         <springdoc.version>2.8.4</springdoc.version>
+        <redisson.version>3.35.0</redisson.version>
     </properties>
 
     <dependencies>
@@ -69,6 +70,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>${redisson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
